# kosound

./: .travis.yml  CMakeLists.txt  README.md  sources.cmake
src/: .soundstream.cpp.swp  cafstream.cpp  cafstream.h  kosoundconfig.h.in  oggstream.cpp  oggstream.h  sndfx.cpp  sndfx.h  sound.cpp  sound.h  soundstream.cpp  soundstream.h
